# roundup-crypto-lab

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest-failure.txt
codex/: 001-bootstrap-and-validate.md
config/: historical-crypto-scenarios-v1.json
docs/: active-backtests.md  architecture.md  breakout-strategy-variants.md  cash-flow-aware-metrics.md  freqtrade-validation.md  historical-crypto-campaign.md  historical-scenario-registry.md  passive-benchmarks.md  research-batch-one-strategies.md  research-batch-two-strategies.md  risk-policy.md  roadmap.md  second-generation-strategies.md  unified-scenario-comparison.md
scripts/: __init__.py  apply_custom_stop_fix.py  instrument_freqtrade_stoploss.py  passive_benchmarks.py
tests/: test_active_backtests.py  test_active_comparison.py  test_active_workflow_contract.py  test_breakout_strategy_variants.py  test_cash_flow_metrics.py  test_compare_strategies.py  test_effective_backtest_inputs.py  test_freqtrade_active_serialization.py  test_freqtrade_compatible_backtest.py  test_freqtrade_differential.py  test_freqtrade_reports.py  test_historical_campaign.py  test_historical_campaign_workflow.py  test_historical_scenarios.py  test_investment_plan.py  test_kraken_ohlcv.py  test_one_shot_diagnostic.py  test_one_shot_diagnostic_runner.py  test_one_shot_differential.py  test_one_shot_open_position_diagnostic.py  test_passive_benchmark_cash_tolerance.py  test_passive_benchmarks.py  test_requested_comparison_coverage.py  test_research_batch_one_strategies.py  test_research_batch_two_runtime.py  test_research_batch_two_strategies.py  test_roundups.py  test_safety_configuration.py  test_scenario_decimal_normalization.py  test_stop_callback_order.py  test_stop_update_before_low.py  test_unified_comparison.py  test_visible_atr_timing.py  test_workflows.py
user_data/: config.json  (+1 more)
(+86 files in other folders)
