[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "roundup-crypto-lab"
version = "0.1.0"
description = "Exact-cent bankroll contributions and a dry-run crypto trading laboratory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
roundup-report = "roundup_crypto_lab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/roundup_crypto_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
