[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "roundup-crypto-lab"
version = "0.1.0"
description = "Exact-cent bankroll contributions and a dry-run crypto trading laboratory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=3.0.3,<3.1",
  "pyarrow>=24.0.0,<25",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "PyYAML>=6,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
roundup-report = "roundup_crypto_lab.cli:main"
kraken-ohlcv-import = "roundup_crypto_lab.kraken_ohlcv:main"

[tool.hatch.build.targets.wheel]
packages = ["src/roundup_crypto_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = ["native_differential: runs the offline native Freqtrade and adapter comparison"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/roundup_crypto_lab/active_backtests.py" = ["E501"]
